try to avoid flicker for all fontawesome icons

--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ img {
 
 i.fa {
   display: inline-block;
-  width: 1.5em;
+  width: 1.2em;
 }
 
 /* --- Navbar --- */
